# AI-Native-Tasks-Manager

./: .gitignore  AGENTS.md  opencode.jsonc  opencode_mcp_test.jsonc  skills-lock.json
.agents/skills/tasks-manager/: SKILL.md
.github/workflows/: tasks-mcp.yml
docs/adrs/: agent-decisions.md
services/: tasks_mcp_connection_summary.md
services/tasks_manager_agent/: .env.template  .gitignore  pyproject.toml
services/tasks_manager_agent/tasks_manager_agent/: config.py  failover_model.py  hello_world.py  main.py  sandbox_agent.py  test_tools.py
services/tasks_mcp/: .dockerignore  Dockerfile  README.md  pyproject.toml  server_err.txt  verify_mcp.py
services/tasks_mcp/tasks_mcp/: client.py  config.py  errors.py  formatters.py  healthcheck.py  mcp_instance.py  server.py  storage.py
services/tasks_mcp/tasks_mcp/e2e/: conftest.py  test_e2e.py
services/tasks_mcp/tasks_mcp/models/: work_item.py
services/tasks_mcp/tasks_mcp/tests/: conftest.py  e2e_scenarios.py  test_client.py  test_config.py  test_errors.py  test_formatters.py  test_models.py  test_server.py  test_storage.py
services/tasks_mcp/tasks_mcp/tests/tools/: test_capture.py  test_modify.py  test_remove.py  test_resolve.py  test_review.py
services/tasks_mcp/tasks_mcp/tools/: capture.py  modify.py  remove.py  resolve.py  review.py
specs/mcp-server/: decisions-summary.md  decisions.md  design.md  plan.md  resources.md  tools.md
specs/mcp-server/evaluation/: evaluation.xml
