[project]
name = "tasks-mcp"
version = "0.1.1"
description = "MCP server for AI-native task management"
requires-python = ">=3.12"
dependencies = [
    "mcp",
    "pydantic>=2.0",
    "httpx",
    "requests>=2.33.1",
    "sseclient-py>=1.9.0",
]

[project.scripts]
tasks-mcp = "tasks_mcp.server:main"

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.isort]
known-first-party = ["tasks_mcp"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "tasks_mcp/tests/",
    ".venv/",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tasks_mcp/tests"]
markers = [
    "e2e: end-to-end integration tests (start server, call tools via HTTP)",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
